2014-01-25  Walter Lee  <walt@tilera.com>

	* config/tilegx/tilegx.c (tilegx_expand_builtin): Set
	PREFETCH_SCHEDULE_BARRIER_P to true for prefetches.
	* config/tilepro/tilepro.c (tilepro_expand_builtin): Ditto.

2014-01-25  Richard Sandiford  <rdsandiford@googlemail.com>
	
	* config/mips/constraints.md (kl): Delete.
	* config/mips/mips.md (divmod<mode>4, udivmod<mode>4): Turn into
	define expands, using...
	(divmod<mode>4_mips16, udivmod<mode>4_mips16): ...these new
	instructions for MIPS16.
	(*divmod<mode>4, *udivmod<mode>4): New patterns, taken from the
	non-MIPS16 version of the old divmod<mode>4 and udivmod<mode>4.

2014-01-25  Walter Lee  <walt@tilera.com>

	* config/tilepro/tilepro.md (ctzdi2): Use register_operand
	predicate.
	(clzdi2): Ditto.
	(ffsdi2): Ditto.

2014-01-25  Walter Lee  <walt@tilera.com>

	* config/tilegx/tilegx.c (tilegx_expand_to_rtl_hook): New.
	(TARGET_EXPAND_TO_RTL_HOOK): Define.

2014-01-25  Richard Sandiford  <rdsandiford@googlemail.com>

	* rtlanal.c (canonicalize_condition): Split out duplicated mode check.
	Handle XOR.

2014-01-25  Jakub Jelinek  <jakub@redhat.com>

	* print-rtl.c (in_call_function_usage): New var.
	(print_rtx): When in CALL_INSN_FUNCTION_USAGE, always print
	EXPR_LIST mode as mode and not as reg note name.

	PR middle-end/59561
	* cfgloopmanip.c (copy_loop_info): If
	loop->warned_aggressive_loop_optimizations, make sure
	the flag is set in target loop too.

2014-01-24  Balaji V. Iyer  <balaji.v.iyer@intel.com>

	* builtins.c (is_builtin_name): Renamed flag_enable_cilkplus to
	flag_cilkplus.
	* builtins.def: Likewise.
	* cilk.h (fn_contains_cilk_spawn_p): Likewise.
	* cppbuiltin.c (define_builtin_macros_for_compilation_flags): Likewise.
	* ira.c (ira_setup_eliminable_regset): Likewise.
	* omp-low.c (gate_expand_omp): Likewise.
	(execute_lower_omp): Likewise.
	(diagnose_sb_0): Likewise.
	(gate_diagnose_omp_blocks): Likewise.
	(simd_clone_clauses_extract): Likewise.
	(gate): Likewise.
